Ported to 26.1.2